src/objects/rh2__PS_Object_Realtime__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>rh2__Allow_Child_Save_If_Parent_Save_Fails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to allow child records to save even if the parent record hits an exception while saving.</description>
        <inlineHelpText>Check this box to allow child records to save even if the parent record hits an exception while saving.</inlineHelpText>
        <label>Allow Child Save If Parent Save Fails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Asynchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Forces rollups to run asynchronously on the specified object.</inlineHelpText>
        <label>Enable Asynchronous Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Disable_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Disables default Rollup Helper trigger on the specified object type when checked.</inlineHelpText>
        <label>Disable Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Disable_realtime__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Disables realtime processing on the specified object type when checked.</inlineHelpText>
        <label>Disable Realtime Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Object_Full_Name__c</fullName>
        <label>Full Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Prevent_DLDA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Disables data load dynamic asynchronous functionality on the specified object type when checked. Use of data load dynamic asynchronous processing is strongly recommended.</inlineHelpText>
        <label>Disable Data Load Dynamic Async</label>
        <type>Checkbox</type>
    </fields>
    <label>Rollup Helper Object Realtime Processing</label>
</CustomObject>